# Panoptibot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FEATURE_PLAN.md  README.md  docker-compose.yml  pyproject.toml
catboost_info/: catboost_training.json  time_left.tsv
deploy/: panoptibot-cleanup.service  panoptibot-cleanup.timer  panoptibot.service
docs/: linux-mint-copycat-migration.md  migration-guide.md
panoptibot/: __init__.py
panoptibot/analytics/: activity_stats.py  emoji_stats.py
panoptibot/bonds/: lm_labels.py  scorer.py
panoptibot/bot/: __init__.py  cache.py  config.py  context.py  doctor.py  embeds.py  logger.py  main.py  rate_limit.py  resolver.py  security.py  session_tracker.py
panoptibot/catchup/: __init__.py  social.py
panoptibot/commands/: __init__.py  bonds.py  catchup.py  copycat.py  culture.py  debug.py  emoji_culture.py  graph.py  health.py  help.py  influence.py  profile.py  stats.py  summary.py
panoptibot/copycat/: __init__.py  core.py  lm_studio.py  runtime.py  store.py
panoptibot/culture/: __init__.py  lore.py  memory.py
panoptibot/events/: __init__.py  member_events.py  message_events.py  reaction_events.py
panoptibot/graph/: __init__.py  graph_builder.py  graph_queries.py  neo4j_client.py
panoptibot/ml/: __init__.py  (+4 more)
scripts/: __init__.py  cleanup_logs.py  doctor.py  init_db.py  train_model.py
tests/: test_catchup_bullets.py  test_copycat_core.py  test_copycat_store.py  test_culture_memory.py  test_doctor.py  test_extractor.py  test_feature_engineering.py  test_lm_studio.py  test_rate_limit.py
(+3 files in other folders)
