[project]
name = "panoptibot"
version = "0.1.0"
description = "Self-hosted Discord analytics and recommendation bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0,<3.0.0",
  "neo4j>=5.23.0,<6.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "catboost>=1.2.5,<2.0.0",
  "matplotlib>=3.8.4,<4.0.0",
  "networkx>=3.3,<4.0.0",
  "Pillow>=10.3.0,<11.0.0",
  "orjson>=3.10.6,<4.0.0",
]

[project.scripts]
panoptibot = "panoptibot.bot.main:run"
panoptibot-train = "scripts.train_model:main"
panoptibot-cleanup = "scripts.cleanup_logs:main"
panoptibot-init-db = "scripts.init_db:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panoptibot", "scripts"]

[tool.uv]
package = true
